2018-06-30  Araki Ken  <arakiken@users.sf.net>

	* fb/ui_imagelib.c: SIXEL_PALETTES_SIZE is used.

	* c_sixel.c:
	  - load_sixel_from_data() supports a maximum of up to 65536 palettes.
	  - SIXEL_PALETTES_SIZE macro is defined.

2018-06-17  Araki Ken  <arakiken@users.sf.net>

	* configure.in: m17nlib is checked by PKG_CHECK_MODULES().

	* mc_im.c: libim-*-sdl2.so is supported if gui is "sdl2".

	* ef_ucs_property.table: Updated to Unicode 11.0.0 (UnicodeData.txt and
	  EastAsianWidth.txt)

	* mlconfig/main.c: mc_im_init() is called in main() first of all.

	* mc_im.[ch]: mc_im_init() which calls get_im_info() is added.

2018-06-14  Araki Ken  <arakiken@users.sf.net>

	* win32/ui_connect_dialog.c: HOMEPATH environmental variable is ensured
	  before executing servman.exe.

	* version.h: 3.8.6 -> 3.8.6post

2018-06-12  Araki Ken  <arakiken@users.sf.net>

	* 3.8.6 released.
	  (tag "rel-3_8_6")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h:
	  updated for 3.8.6.

	* man/mlterm.1: Updated.

2018-06-12  Araki Ken  <arakiken@users.sf.net>

	* ui_screen_manager.c:
	  open_pty_intern() assumes that ui_connect_dialog() doesn't change
	  arguments except uri.

	* win32/ui_connect_dialog.c:
	  dialog_proc() checks selected_ssh_privkey before 'if (default_server)'.

	* xlib/ui_connect_dialog.c:
	  ui_connect_dialog() doesn't change 'pass' arguments if it fails.

	* android/jni/ui_connect_dialog.c:
	  ui_connect_dialog() doesn't set values to arguments except uri
	  if ui_display_show_dialog() fails.

2018-06-10  Araki Ken  <arakiken@users.sf.net>

	* xlib/ui_window.c: Compiling error is fixed.

	* gtk/Makefile.in: @LPOBL@ and @LMEF@ are used.

	* configure.in: contrib/scrollbar is copied to gui/ if multiple values separated
	  by ',' is specified as the value of --with-gui option.

	* libtype/Makefile.in:
	  LPOBL=${top_builddir}/baselib/src/libpobl.la => LPOBL=@LPOBL@

2018-06-09  Araki Ken  <arakiken@users.sf.net>
